--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -53,6 +53,14 @@ jobs:
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
+    # Reduces build times
+    - name: Restore gdextension
+      id: cache-gdextension-restore
+      uses: actions/cache/restore@v4
+      with:
+        path: ${{ steps.strings.outputs.build-output-dir }}/third-party/godot-cpp
+        key: ${{ runner.os }}-gdextension
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
@@ -62,10 +70,18 @@ jobs:
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -S ${{ github.workspace }}
+        -DCMAKE_POSITION_INDEPENDENT_CODE=ON
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+
+    - name: Save gdextension
+      id: cache-gdextension-save
+      uses: actions/cache/save@v4
+      with:
+        path: ${{ steps.strings.outputs.build-output-dir }}/third-party/godot-cpp
+        key: ${{ runner.os }}-gdextension
 
     - name: Release
       uses: softprops/action-gh-release@v1
