--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,13 +57,17 @@ set(SRCS "${PROJECT_SOURCE_DIR}/src/VModel.cpp"
 include_directories("${PROJECT_SOURCE_DIR}/third-party/vcore/lib/include")
 
 add_library(${PROJECT_NAME} SHARED main.cpp ${SRCS})
-target_link_options(${PROJECT_NAME} PRIVATE
-	$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:
-		-static-libgcc
-		-static-libstdc++
-        -static
-		-Wl,-R,'$$ORIGIN'
-	>
-)
+
+if(WIN32)
+    target_link_options(${PROJECT_NAME} PRIVATE
+        $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:
+            -static-libgcc
+            -static-libstdc++
+            -static
+            -Wl,-R,'$$ORIGIN'
+        >
+    )
+endif(WIN32)
+
 target_link_libraries(${PROJECT_NAME} PRIVATE godot-cpp VCore)
 add_dependencies(${PROJECT_NAME} VCore godot-cpp)
