--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -62,6 +62,9 @@ jobs:
         path: ${{ steps.strings.outputs.build-output-dir }}/third-party/godot-cpp
         key: ${{ runner.os }}-gdextension
 
+    - name: Debug
+      run: echo ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+
     - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
       name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
