--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -63,9 +63,9 @@ jobs:
         key: ${{ runner.os }}-gdextension
 
     - name: Debug
-      run: echo ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+      run: echo ${{ steps.cache-gdextension-restore.outputs.cache-hit != 'true' }}
 
-    - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+    - if: ${{ steps.cache-gdextension-restore.outputs.cache-hit != 'true' }}
       name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
@@ -77,7 +77,7 @@ jobs:
         -S ${{ github.workspace }}
         -DCMAKE_POSITION_INDEPENDENT_CODE=ON
 
-    - if: ${{ steps.cache-npm.outputs.cache-hit == 'true' }}
+    - if: ${{ steps.cache-gdextension-restore.outputs.cache-hit == 'true' }}
       name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
