--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -52,7 +52,7 @@ jobs:
       shell: bash
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
-        OS=${{ runner.os }} echo "os=${INPUT,,}" >> "$GITHUB_OUTPUT"
+        OS=${{ runner.os }} echo "os=${OS,,}" >> "$GITHUB_OUTPUT"
 
     # Reduces build times
     - name: Restore gdextension
