--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -66,7 +66,9 @@ jobs:
         key: ${{ runner.os }}-gdextension
 
     - name: Debug
-      run: echo ${{ steps.cache-gdextension-restore.outputs.cache-hit != 'true' }} ${{ steps.strings.outputs.os }}
+      run: |
+        echo ${{ steps.cache-gdextension-restore.outputs.cache-hit != 'true' }} ${{ steps.strings.outputs.os }}
+        ls ${{ steps.strings.outputs.build-output-dir }}/third-party/godot-cpp/bin
 
     - if: ${{ steps.cache-gdextension-restore.outputs.cache-hit != 'true' }}
       name: Configure CMake
