--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -33,10 +33,12 @@ jobs:
             c_compiler: cl
             cpp_compiler: cl
             static_lib_ext: lib
+            sub_dir: Release/
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
             static_lib_ext: a
+            sub_dir: ""
         exclude:
           - os: windows-latest
             c_compiler: clang
@@ -91,7 +93,7 @@ jobs:
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -DPREBUILT_GODOT_PATH=${{ steps.strings.outputs.build-output-dir }}/third-party/godot-cpp/bin/libgodot-cpp.${{ steps.strings.outputs.os }}.release.64.${{ matrix.static_lib_ext }}
+        -DPREBUILT_GODOT_PATH=${{ steps.strings.outputs.build-output-dir }}/third-party/godot-cpp/bin/${{ matrix.sub_dir }}libgodot-cpp.${{ steps.strings.outputs.os }}.release.64.${{ matrix.static_lib_ext }}
         -S ${{ github.workspace }}
         -DCMAKE_POSITION_INDEPENDENT_CODE=ON
 
