--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -102,4 +105,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
+        generate_release_notes: true
         files: ${{ steps.strings.outputs.build-output-dir }}/libvcoregdext.*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
