--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -27,7 +27,7 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest]
         build_type: [Release]
         c_compiler: [clang, cl]
         include:
@@ -35,24 +35,26 @@ jobs:
             c_compiler: cl
             cpp_compiler: cl
             godot_static_lib: Release/godot-cpp.windows.release.64.lib
-            vcore_lib: Release/vcoregdext.dll
+            vcore_lib: vcoregdext.dll
+            sub_dir: /Release
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
             godot_static_lib: libgodot-cpp.linux.release.64.a
             vcore_lib: libvcoregdext.so
-          - os: macos-latest
-            c_compiler: clang
-            cpp_compiler: clang++
-            godot_static_lib: libgodot-cpp.macos.release.64.a
-            vcore_lib: libvcoregdext.framework
+            sub_dir: ""
+          # - os: macos-latest
+          #   c_compiler: clang
+          #   cpp_compiler: clang++
+          #   godot_static_lib: libgodot-cpp.macos.release.64.a
+          #   vcore_lib: libvcoregdext.framework
         exclude:
           - os: windows-latest
             c_compiler: clang
           - os: ubuntu-latest
             c_compiler: cl
-          - os: macos-latest
-            c_compiler: cl
+          # - os: macos-latest
+          #   c_compiler: cl
 
     steps:
     - uses: actions/checkout@v3
@@ -115,10 +117,11 @@ jobs:
     - name: Debug
       run: |
         ls ${{ steps.strings.outputs.build-output-dir }}/
-        ls ${{ steps.strings.outputs.build-output-dir }}/${{ matrix.vcore_lib }}
+        ls ${{ steps.strings.outputs.build-output-dir }}/${{ matrix.sub_dir }}
 
     - name: Release
       uses: softprops/action-gh-release@v1
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}${{ matrix.sub_dir }}
       if: startsWith(github.ref, 'refs/tags/')
       with:
         generate_release_notes: true
