--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -4,6 +4,7 @@ name: Build of vcoregdext
 
 on:
   push:
+    branches: [ "main" ]
     tags:
       - '*'
   pull_request:
@@ -35,13 +36,15 @@ jobs:
             c_compiler: cl
             cpp_compiler: cl
             godot_static_lib: Release/godot-cpp.windows.release.64.lib
-            vcore_lib: vcoregdext.dll
+            vcore_lib: \vcoregdext.dll
+            build_dir: \build
             sub_dir: /Release
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
             godot_static_lib: libgodot-cpp.linux.release.64.a
-            vcore_lib: libvcoregdext.so
+            vcore_lib: /libvcoregdext.so
+            build_dir: /build
             sub_dir: ""
           # - os: macos-latest
           #   c_compiler: clang
@@ -66,7 +69,7 @@ jobs:
       id: strings
       shell: bash
       run: |
-        echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+        echo "build-output-dir=${{ github.workspace }}${{ matrix.build_dir }}" >> "$GITHUB_OUTPUT"
 
     # Reduces build times
     - name: Restore gdextension
@@ -119,12 +122,15 @@ jobs:
         ls ${{ steps.strings.outputs.build-output-dir }}/
         ls ${{ steps.strings.outputs.build-output-dir }}/${{ matrix.sub_dir }}
 
+    - name: Copy
+      if: startstartsWith(${{ matrix.os }}, "windows")
+      run: mv ${{ steps.strings.outputs.build-output-dir }}${{ matrix.sub_dir }}${{ matrix.vcore_lib }} ${{ steps.strings.outputs.build-output-dir }}
+
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         generate_release_notes: true
-        files: ${{ steps.strings.outputs.build-output-dir }}/${{ matrix.vcore_lib }}
+        files: ${{ steps.strings.outputs.build-output-dir }}${{ matrix.vcore_lib }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}${{ matrix.sub_dir }}
