--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -21,14 +21,8 @@ jobs:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
 
-      # Set up a matrix to run the following 3 configurations:
-      # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
-      # 2. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>
-      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
-      #
-      # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         build_type: [Release]
         c_compiler: [clang, cl]
         include:
@@ -44,18 +38,18 @@ jobs:
             godot_static_lib: libgodot-cpp.linux.release.64.a
             vcore_lib: libvcoregdext.so
             sub_dir: ""
-          # - os: macos-latest
-          #   c_compiler: clang
-          #   cpp_compiler: clang++
-          #   godot_static_lib: libgodot-cpp.macos.release.64.a
-          #   vcore_lib: libvcoregdext.framework
+          - os: macos-latest
+            c_compiler: clang
+            cpp_compiler: clang++
+            godot_static_lib: libgodot-cpp.macos.release.64.a
+            vcore_lib: libvcoregdext.framework
         exclude:
           - os: windows-latest
             c_compiler: clang
           - os: ubuntu-latest
             c_compiler: cl
-          # - os: macos-latest
-          #   c_compiler: cl
+          - os: macos-latest
+            c_compiler: cl
 
     steps:
     - uses: actions/checkout@v3
@@ -82,8 +76,6 @@ jobs:
 
     - if: ${{ steps.cache-gdextension-restore.outputs.cache-hit != 'true' }}
       name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
@@ -95,8 +87,6 @@ jobs:
 
     - if: ${{ steps.cache-gdextension-restore.outputs.cache-hit == 'true' }}
       name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
@@ -108,7 +98,6 @@ jobs:
         -DCMAKE_POSITION_INDEPENDENT_CODE=ON
 
     - name: Build
-      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} -j 4
 
     - name: Save gdextension
