--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -42,7 +42,7 @@ jobs:
             c_compiler: clang
             cpp_compiler: clang++
             godot_static_lib: libgodot-cpp.macos.release.64.a
-            vcore_lib: libvcoregdext.framework
+            vcore_lib: libvcoregdext.dylib
         exclude:
           - os: windows-latest
             c_compiler: clang
