--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ set(SRCS "${PROJECT_SOURCE_DIR}/src/VModel.cpp"
          "${PROJECT_SOURCE_DIR}/src/VMesher.cpp"
          "${PROJECT_SOURCE_DIR}/src/VMaterial.cpp"
          "${PROJECT_SOURCE_DIR}/src/VLoader.cpp"
+         "${PROJECT_SOURCE_DIR}/src/VExporter.cpp"
          "${PROJECT_SOURCE_DIR}/src/GodotFileStream.cpp")
 
 include_directories("${PROJECT_SOURCE_DIR}/third-party/vcore/lib/include")
